--- a/test/index.html
+++ b/test/index.html
@@ -1,3 +1,20 @@
-<script type="text/javascript">
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>The HTML5 Herald</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
+</head>
+
+<body>
+  <script type="text/javascript">
     document.write(document.referrer);
 </script>
+</body>
+</html>
