--- a/test/index.html
+++ b/test/index.html
@@ -4,9 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <title>test</title>
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 
@@ -15,7 +13,7 @@
 <body>
   <h1>loaded!</h1>
   <script type="text/javascript">
-    document.write(document.referrer);
+   alert(document.referrer);
 </script>
 </body>
 </html>
