Edit versioning and alert

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20200513.1</span> <br>
+					Version: <span id="currentappversion">20200618.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -240,7 +240,9 @@
 				</div>
 				<div class="col-lg-10 py-1 px-4">
 					<p>
-						Added UI display options. You can now select which stats you want to see. Head to the settings tab to try it out!
+						The history now displays positive or negative overtime more clearly.<br>
+						<br>
+						A stopwatch for break time has been introduced! Just click the start button when going on a break and click the button again afterwards. Don't wory, you can still edit it ;)
 					</p>
 				</div>
 			</div>
