--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20200619.1</span> <br>
+					Version: <span id="currentappversion">20200702.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -247,6 +247,8 @@
 				<div class="col-lg-10 py-1 px-4">
 					<p>
 						You can now change howmany minutes are being subtracted when you open the page. Head to the settings to change it :)<br>
+						<br>
+						The add time button now adds the time specified in the hourschedule dropdown next to the overtime.
 					</p>
 				</div>
 			</div>
