--- a/index.html
+++ b/index.html
@@ -15,20 +15,6 @@
 
 	  gtag('config', 'UA-160200625-1');
 	</script>
-	<!-- BOOTSTRAP -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-	<script>
-		$(document).ready(function(){
-		  $('[data-toggle="tooltip"]').tooltip();
-		});
-	</script>
-	<!-- Font Awsome -->
-	<link href="css/all.min.css" rel="stylesheet">
-	<!-- Custom Styles -->
-	<link href="css/bootstrap_specific_style.css" rel="stylesheet">
 </head>
 <body onload="reset();">
 <!-- Modal HTML -->
@@ -224,7 +210,7 @@
 					Some of these include the weather forecast, quick launch buttons for applications or folders, monitoring displays (for CPU, GPU, RAM, disk size, ...), music player info and controls, time clocks, ... And all of this in different flavours.<br>
 					And the most cool aspect about it: it moves! Skins get updated every X seconds making it possible to display animations and update your weather etc.<br>
 					<br>
-					<img class="rounded mx-auto d-block" style="width: 85%" src="https://media1.tenor.com/images/c2f0bcdc67b7417d7e74b53b8f8aefb9/tenor.gif?itemid=15613840"/><br>
+					<img class="rounded mx-auto d-block" width="85%" src="https://media1.tenor.com/images/c2f0bcdc67b7417d7e74b53b8f8aefb9/tenor.gif?itemid=15613840"/><br>
 					You can make your own, but you can also just download skins and even entire layouts. Check the <a href="https://www.rainmeter.net/discover/" target ="_blank">rainmeter discover page</a> to find links to libraries of great skins.<br>
 					<br>
 					<a class="btn btn-outline-success btn-sm" href="https://www.rainmeter.net/" target="_blank" role="button">Rainmeter website</a>
@@ -426,6 +412,20 @@
 </div>
 
 </body>
+<!-- BOOTSTRAP -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<script>
+	$(document).ready(function(){
+	  $('[data-toggle="tooltip"]').tooltip();
+	});
+</script>
+<!-- Font Awsome -->
+<link href="css/all.min.css" rel="stylesheet">
+<!-- Custom Styles -->
+<link href="css/bootstrap_specific_style.css" rel="stylesheet">
 <!-- Moment.js -->
 <script src="js/moment.min.js"></script><!-- https://momentjs.com/docs -->
 <script>
